Bug 184621 - The resource view in KOrganizer is no longer alphabetically sorted, but apparently random
Summary: The resource view in KOrganizer is no longer alphabetically sorted, but appar...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-17 12:45 UTC by Reinhold Kainhofer
Modified: 2009-04-19 22:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Random sorting of resource names (13.45 KB, image/png)
2009-02-17 12:46 UTC, Reinhold Kainhofer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Reinhold Kainhofer 2009-02-17 12:45:31 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

The resource view in the lower left corner of KOrganizer does not use any proper sorting of the resource names. In kde 3.5, the list was always sorted alphabetically, now it seems that activated resources are sorted first, but otherwise the sorting seems random... Attached is a screenshot that does not show any proper sorting logic.

In my view, the list should always be alphabetically sorted to make it easier to find a resource.
Comment 1 Reinhold Kainhofer 2009-02-17 12:46:42 UTC
Created attachment 31398 [details]
Random sorting of resource names
Comment 2 Sergio Martins 2009-04-19 22:20:12 UTC
SVN commit 956311 by smartins:

Items in resource view are sorted again, apparently sorting got lost with Qt4 porting.

BUG: 184621


 M  +3 -0      resourceview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956311