Items in resource view are sorted again, apparently sorting got lost with Qt4 porting.

BUG: 184621

svn path=/trunk/KDE/kdepim/; revision=956311